--- a/templates/salesstats.html
+++ b/templates/salesstats.html
@@ -6,7 +6,14 @@
     <br />
     <div class="row">
         <h2>累計</h2>
-        <h3>{{ sales_total.earnings__sum }}円</h3>
+        <h3>
+            {% if sales_total %}
+            {{ sales_total.earnings__sum }}円
+            {% else %}
+            0円
+            {% endif %}
+        </h3>
+        
     </div>
     <br />
     <div class="row">
